--- a/Home.css
+++ b/Home.css
@@ -138,8 +138,9 @@ div{
   }
   footer .content .top{
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: 20px;
   }
   .content .top .logo-details{
