--- a/Licence/L3.css
+++ b/Licence/L3.css
@@ -83,7 +83,7 @@ div{
 }
 #html2 .Cours_C2 .Cour .pdf_Cour{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     flex-wrap: wrap;
     margin: 20px;
     gap: 20px;
@@ -92,7 +92,7 @@ div{
     display: flex;
     justify-content: left;
     gap:15px;
-    margin-left: 15px;
+    margin-left: 2px;
     text-decoration: none;
     color: rgb(3, 1, 124);
 }
