--- a/2AS_FR.css
+++ b/2AS_FR.css
@@ -179,6 +179,16 @@ li{
 }
 
 /*html2*/
+.text_Cour .fa-sharp{
+	font-size: 20px;
+  }
+  .pdf_Cour .fa-file-powerpoint{
+	font-size: 30px;
+	margin-bottom: 10px ;
+  }
+  .pdf_Cour .fa-solid{
+	margin-top: 10px ;
+  }
 
 #html2 .text_h2_C2{
     text-align: center;
@@ -209,7 +219,7 @@ li{
     gap: 10px;
     margin-top: 10px;
     margin-left: 20px;
-    font-size: 22px;
+    font-size: 17px;
     font-weight: 900;
     font-family: 'Kanit', sans-serif;
 }
@@ -236,7 +246,7 @@ li{
     margin-top: 17px;
 }
 #html2 .Cours_C2 .Cour .pdf_Cour p{
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 800;
     font-family: 'Pacifico', cursive;
 }
