--- a/Licence/L3.css
+++ b/Licence/L3.css
@@ -53,6 +53,17 @@ div{
     border-radius: 10%;
 }
 
+.text_Cour .fa-sharp{
+	font-size: 20px;
+  }
+  .pdf_Cour .fa-file-powerpoint{
+	font-size: 30px;
+	margin-bottom: 10px ;
+  }
+  .pdf_Cour .fa-solid{
+	margin-top: 10px ;
+  }
+
 #html2 .text_h2_C2{
     text-align: center;
     margin-top: 15px;
@@ -82,7 +93,7 @@ div{
     gap: 10px;
     margin-top: 10px;
     margin-left: 20px;
-    font-size: 22px;
+    font-size: 17px;
     font-weight: 900;
     font-family: 'Kanit', sans-serif;
 }
@@ -109,7 +120,7 @@ div{
     margin-top: 17px;
 }
 #html2 .Cours_C2 .Cour .pdf_Cour p{
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 800;
     font-family: 'Pacifico', cursive;
 }
