--- a/2AS_FR.css
+++ b/2AS_FR.css
@@ -179,6 +179,12 @@ li{
 }
 
 /*html2*/
+
+.pdf_Cour .fa-file-pdf fa-2xl{
+	font-size: 30px;
+	margin-bottom: 10px ;
+  }
+
 .text_Cour .fa-sharp{
 	font-size: 20px;
   }
@@ -193,7 +199,7 @@ li{
 #html2 .text_h2_C2{
     text-align: center;
     margin-top: 15px;
-    font-size: 25px;
+    font-size: 17px;
     font-weight: 800;
     font-family: 'Kanit', sans-serif;
 }
