--- a/2AS_FR.css
+++ b/2AS_FR.css
@@ -180,7 +180,7 @@ li{
 
 /*html2*/
 
-.pdf_Cour .fa-file-pdf fa-2xl{
+.pdf_Cour .fa-file-arrow-down{
 	font-size: 30px;
 	margin-bottom: 10px ;
   }
