--- a/2AS_AR.css
+++ b/2AS_AR.css
@@ -182,7 +182,7 @@
   }
   .pdf_Cour .fa-file-powerpoint{
 	font-size: 30px;
-	margin-bottom: 10px ;
+	margin-bottom: -10px ;
   }
   .pdf_Cour .fa-solid{
 	margin-top: 10px ;
@@ -230,7 +230,7 @@
 	  justify-content: right;
 	  gap: 10px;
 	  margin-top: 10px;
-	  margin-right: 20px;
+	  margin-right: 5px;
 	  font-size: 17px;
 	  font-weight: 900;
 	  font-family: 'Almarai', sans-serif;
@@ -239,6 +239,9 @@
   }
   
   #html2 .Cours_C2 .Cour .pdf_Cour{
+	  display: flex;
+	  justify-content: right;
+	  flex-wrap: wrap;
 	  margin-top: 12px;
 	  gap: 20px;
   }
@@ -247,7 +250,7 @@
 	  display: flex;
 	  justify-content: right;
 	  gap:15px;
-	  margin-top: 15px;
+	  margin-top: 1px;
 	  margin-right: 15px;
 	  margin-bottom: 5px;
 	  text-decoration: none;
