--- a/Licence/L3.css
+++ b/Licence/L3.css
@@ -67,7 +67,7 @@ div{
 #html2 .text_h2_C2{
     text-align: center;
     margin-top: 15px;
-    font-size: 17px;
+    font-size: 20px;
     font-weight: 800;
     font-family: 'Kanit', sans-serif;
 }
@@ -117,10 +117,38 @@ div{
   text-decoration: underline;
 }
 #html2 .Cours_C2 .Cour .pdf_Cour i{
-    margin-top: 17px;
+    margin-top: 16px;
 }
 #html2 .Cours_C2 .Cour .pdf_Cour p{
     font-size: 16px;
     font-weight: 800;
     font-family: 'Pacifico', cursive;
+}
+
+.fa-file-arrow-down{
+	font-size: 30px;
+  }
+
+#html2 .Cours_C2 .Cour .pdf_Cour1{
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    margin: 20px;
+    gap: 20px;
+}
+#html2 .Cours_C2 .Cour .pdf_Cour1 a{
+    display: flex;
+    justify-content: left;
+    gap:15px;
+    margin-left: 2px;
+    text-decoration: none;
+    color: rgb(3, 1, 124);
+}
+#html2 .Cours_C2 .Cour .pdf_Cour1 p{
+    font-size: 16px;
+    font-weight: 800;
+    font-family: 'Pacifico', cursive;
+}
+#html2 .Cours_C2 .Cour .pdf_Cour1 i {
+    margin-top: 1px;
 }
