--- a/Licence/L3.css
+++ b/Licence/L3.css
@@ -60,10 +60,16 @@ div{
     padding: 10px 20px;
     border: 1px solid rgba(61, 61, 133, 0.63);
     border-radius: 10px;
-    margin-bottom: 25px;
+    margin-top: 10px;
 	font-family: 'Kanit', sans-serif;
+    text-decoration: none;
+}
+.no-overflow:hover{
+  opacity: 1;
+  text-decoration: underline;
 }
 .no-overflow1 {
+    margin-left: 20px;
     color: rgb(0, 0, 0);
     line-height: 24px;
 	font-family: 'Kanit', sans-serif;
