--- a/Licence/L3.css
+++ b/Licence/L3.css
@@ -62,17 +62,13 @@ div{
     border-radius: 10px;
     margin-top: 10px;
 	font-family: 'Kanit', sans-serif;
-    text-decoration: none;
-}
-.no-overflow:hover{
-  opacity: 1;
-  text-decoration: underline;
 }
 .no-overflow1 {
     margin-left: 20px;
     color: rgb(0, 0, 0);
     line-height: 24px;
 	font-family: 'Kanit', sans-serif;
+    margin-bottom: 7px;
 }
 
 .text_Cour .fa-sharp{
